5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1596_825.log
== SUBMITION (2019-03-21 23:04:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("Digite o raio: ")
from math import pi
area = pi*raio**2
vomule = 4/3*pi*raio**3
print(round(area,3))
print(round(volume,3))
				 

-- EXECUTION TIME:
0.141078
-- ERROR:
  File "/home/codebench/codes/1596/825/main.py", line 5
    from math import pi
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:05:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("Digite o raio: ")
from math import pi
area = pi*raio**2
vomule = 4/3*pi*raio**3
print(round(area,3))
print(round(volume,3))
				 

-- ERROR:
File "XXXX", line 5
    from math import pi
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:05:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("Digite o raio: "))
from math import pi
area = pi*raio**2
vomule = 4/3*pi*raio**3
print(round(area,3))
print(round(volume,3))
				 

-- EXECUTION TIME:
0.16333
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/825/main.py", line 9, in <module>
    print(round(volume,3))
NameError: name 'volume' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:06:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("Digite o raio: "))
from math import *
area = pi*raio**2
vomule = 4/3*pi*raio**3
print(round(area,3))
print(round(volume,3))
				 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(volume,3))
NameError: name 'volume' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:06:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("Digite o raio: "))
from math import *
area = pi*raio**2
volume = 4/3*pi*raio**3
print(round(area,3))
print(round(volume,3))
				 

-- EXECUTION TIME:
0.181192
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
